# adventofcode-2024

./: .gitignore  README.md
day1/: day1.cabal
day1/app/: Main.hs
day2/: day2.cabal
day2/app/: Main.hs
day3/: day3.cabal  vimParse.txt
day3/app/: Main.hs
day4/: day4.cabal
day4/app/: Main.hs
